Revert "Hero image on iphone fix. Moved to scroll background-attachment"
This reverts commit c1b29709c526786f5f7694a302776f50fb5293c3.

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5 {
   min-height: 100%;
 
   /* Create the parallax scrolling effect */
-  background-attachment: scroll; /*fixed;*/
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
